--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -15,7 +15,7 @@ conky.config = {
     draw_outline = false,
     draw_shades = false,
     extra_newline = false,
-    font = 'Roboto Mono:size=13',
+    font = 'JetBrainsMono Nerd Font:size=14',
     gap_x = 50,
     gap_y = 50,
     minimum_height = 250,
@@ -42,9 +42,9 @@ conky.config = {
 
 
 conky.text = [[
-${color1}${font ConkySymbols:size=20}r${font} ${voffset -10} GNU/Linux»  ${color}
+${color1}${goto 40}${voffset -10}${font JetBrainsMono Nerd Font:size=14} GNU/Linux ${color}${font}
 
-${color1}${goto 40}OS     : ${color}${execi 86400 cat `ls -atr /etc/*-release | tail -2` | grep "PRETTY_NAME" | cut -d= -f2 |  sed 's/"//g'}
+${color1}${goto 40}OS     : ${color}${execi 86400 cat /etc/system-release} 
 ${color1}${goto 40}Kernel : ${color}$kernel on $machine
 
 ${if_match ${battery_percent BAT0} <= 10}\
@@ -52,46 +52,36 @@ ${if_match ${battery_percent BAT0} <= 10}\
 $else \
 	${goto 40}${color1}Battery: \
 $endif\
-${goto 112}${color}${voffset 2}${battery_bar 7,70 BAT0} ${voffset -1}${goto 190}${battery BAT0}${goto 210}${battery_time BAT0}
+${goto 140}${color}${voffset 2}${battery_bar 7,70 BAT0} ${voffset -1}${goto 230}${battery BAT0}${goto 230}${battery_time BAT0}
 
+${goto 40}${color1}${font JetBrainsMono Nerd Font:size=14} System${color}${font}
+${color1}${goto 40}Core 1 : ${color}${freq_g 1}GHz ${goto 360}${cpu cpu0}% ${cpubar cpu0 4,100}
+${color1}${goto 40}Core 2 : ${color}${freq_g 2}GHz ${goto 360}${cpu cpu1}% ${cpubar cpu1 4,100}
 
-${color1}${font ConkySymbols:size=16}f${font} ${voffset -10} System» ${color}
+${color1}${goto 40}Uptime : ${color}$uptime_short 
+${goto 40}${color1}Load   : ${color}${loadavg}
 
-${color1}${goto 40}Core 1 : ${color}${freq_g 1}GHz ${goto 300}${cpu cpu0}% ${cpubar cpu0 4,100}
-${color1}${goto 40}Core 2 : ${color}${freq_g 2}GHz ${goto 300}${cpu cpu1}% ${cpubar cpu1 4,100}
+${goto 40}${color1}${font JetBrainsMono Nerd Font:size=14} Memory ${color}${font}
+${color1}${goto 40}Ram${goto 100}: ${color}$mem / $memmax ${goto 360}$memperc% ${membar 4,100}
+${color1}${goto 40}Swap${goto 100}: ${color}$swap / $swapmax ${goto 360}$swapperc% ${swapbar 4,100}
 
-${color1}${goto 40}Uptime : ${color}$uptime_short ${goto 300}${color1}Load  : ${color}${loadavg}
-
-
-${color1}${font ConkySymbols:size=16}J${font} ${voffset -10} Memory» ${color}
-
-${color1}${goto 40}Ram${goto 100}: ${color}$mem / $memmax ${goto 300}$memperc% ${membar 4,100}
-${color1}${goto 40}Swap${goto 100}: ${color}$swap / $swapmax ${goto 300}$swapperc% ${swapbar 4,100}
-
-
-${color1}${font ConkySymbols:size=16}n${font} ${voffset -10} Processes» ${color}
-
-${color1}${goto 40}CPU usage ${goto 300}Memory Usage${color}
-${color1}${goto 40}${color}
+${color1}${goto 40}CPU usage ${goto 280}Memory Usage${color}
 ${goto 40}${top name 1} ${color}${goto 180}${top cpu 1}% ${goto 280}${top_mem name 1}${goto 450}${top_mem mem_res 1}
 ${goto 40}${top name 2} ${color}${goto 180}${top cpu 2}% ${goto 280}${top_mem name 2}${goto 450}${top_mem mem_res 2}
 ${goto 40}${top name 3} ${color}${goto 180}${top cpu 3}% ${goto 280}${top_mem name 3}${goto 450}${top_mem mem_res 3}
 ${goto 40}${top name 4} ${color}${goto 180}${top cpu 4}% ${goto 280}${top_mem name 4}${goto 450}${top_mem mem_res 4}
 ${goto 40}${top name 5} ${color}${goto 180}${top cpu 5}% ${goto 280}${top_mem name 5}${goto 450}${top_mem mem_res 5}
 
+${color1}${goto 40}${font JetBrainsMono Nerd Font:size=14} Storage ${color}${font}
+${color1}${goto 40}Root${goto 100}: ${color}${fs_used /} / ${fs_size /} ${goto 360}${fs_used_perc /}% ${fs_bar 4,100 /}${goto 40}
+${color1}${goto 40}Home${goto 100}: ${color}${fs_used /home} / ${fs_size /home} ${goto 360}${fs_used_perc /home}% ${fs_bar 4,100 /home}${goto 40}
 
-${color1}${font ConkySymbols:size=16}k${font} ${voffset -4} Storage» ${color}
+${goto 40}${font JetBrainsMono Nerd Font:size=14} Today meetings${font}
+${goto 40}${execpi 1800 $HOME/dotfiles/scripts/calendar.lua conky}
 
-${color1}${goto 40}Root${goto 100}: ${color}${fs_used /} / ${fs_size /} ${goto 300}${fs_used_perc /}% ${fs_bar 4,100 /}${goto 40}
-${color1}${goto 40}Home${goto 100}: ${color}${fs_used /home} / ${fs_size /home} ${goto 300}${fs_used_perc /home}% ${fs_bar 4,100 /home}${goto 40}
+${color1}${goto 550}${voffset -810}${font JetBrainsMono Nerd Font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Docker» ${color}
+${color1}${execpi 10 $HOME/.config/conky/docker.sh 0 docker}
 
-
-${color1}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\uf816 '}${font} ${voffset -4} Eth0» ${color}
-
-${color1}${goto 700}${voffset -940}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\ufd31 '}${font} ${voffset -4} Minikube» ${color}
-${color1}${goto 700}${voffset +10}${execpi 30 $HOME/.config/conky/kube.sh "int" 200}
-
-
-${color1}${goto 700}${font JetBrainsMono Nerd Font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Docker» ${color}
-${color1}${goto 40}${voffset +10}${execpi 10 $HOME/.config/conky/docker.sh 200}
+${color1}${goto 550}${font jetbrainsmono nerd font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} podman» ${color}
+${color1}${execpi 10 $HOME/.config/conky/docker.sh 0 podman}
 ]]
