--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -52,7 +52,7 @@ ${if_match ${battery_percent BAT0} <= 10}\
 $else \
 	${goto 40}${color1}Battery: \
 $endif\
-${goto 140}${color}${voffset 2}${battery_bar 7,70 BAT0} ${voffset -1}${goto 230}${battery BAT0}${goto 230}${battery_time BAT0}
+${goto 140}${color}${voffset 2}${battery_bar 7,70 BAT0} ${voffset -1}${goto 230}${battery BAT0}${goto 410}${battery_time BAT0}
 
 ${goto 40}${color1}${font JetBrainsMono Nerd Font:size=14} System${color}${font}
 ${color1}${goto 40}Core 1 : ${color}${freq_g 1}GHz ${goto 360}${cpu cpu0}% ${cpubar cpu0 4,100}
@@ -76,12 +76,12 @@ ${color1}${goto 40}${font JetBrainsMono Nerd Font:size=14} Storage ${color}${
 ${color1}${goto 40}Root${goto 100}: ${color}${fs_used /} / ${fs_size /} ${goto 360}${fs_used_perc /}% ${fs_bar 4,100 /}${goto 40}
 ${color1}${goto 40}Home${goto 100}: ${color}${fs_used /home} / ${fs_size /home} ${goto 360}${fs_used_perc /home}% ${fs_bar 4,100 /home}${goto 40}
 
-${goto 40}${font JetBrainsMono Nerd Font:size=14} Today meetings${font}
+${goto 40} Today meetings
 ${goto 40}${execpi 1800 $HOME/dotfiles/scripts/calendar.lua conky}
 
-${color1}${goto 550}${voffset -810}${font JetBrainsMono Nerd Font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Docker» ${color}
+${color1}${goto 550}${voffset -710}${font JetBrainsMono Nerd Font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Docker ${color}
 ${color1}${execpi 10 $HOME/.config/conky/docker.sh 0 docker}
 
-${color1}${goto 550}${font jetbrainsmono nerd font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} podman» ${color}
-${color1}${execpi 10 $HOME/.config/conky/docker.sh 0 podman}
+${color1}${goto 550}${font jetbrainsmono nerd font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Podman ${color}
+${color1}${execpi 10 $HOME/.config/conky/containers.lua podman}
 ]]
