--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -15,10 +15,10 @@ monitor = ${env:MONITOR:}
 monitor-exact = true
 enable-ipc = true
 wm-restack = i3
-height = 30
+height = 35
 foreground = ${colors.foreground}
 background = ${colors.background}
-font-0 = JetBrainsMono Font:style=Regular:size=14;2
+font-0 = JetBrainsMono Nerd Font:style=Regular:size=15;2
 font-1 = "Iosevka Nerd Font:size=14;3"
 padding-right = 1
 module-margin = 2
@@ -261,4 +261,4 @@ exec = /home/cosmin/dotfiles/scripts/calendar.lua
 label =  %output%
 format =  <label>
 format-foreground = #bdeefc
-interval = 60
+interval = 1800
