--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -84,4 +84,7 @@ ${color1}${execpi 10 $HOME/.config/conky/docker.sh 0 docker}
 
 ${color1}${goto 550}${font jetbrainsmono nerd font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Podman ${color}
 ${color1}${execpi 10 $HOME/.config/conky/containers.lua podman}
+
+${color1}${goto 550}${font jetbrainsmono nerd font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Podman on fedorasrv ${color}
+${color1}${execpi 10 $HOME/.config/conky/prometheus.lua}
 ]]
