add hosts metrics

--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -87,4 +87,7 @@ ${color1}${execpi 10 $HOME/.config/conky/containers.lua podman}
 
 ${color1}${goto 550}${font jetbrainsmono nerd font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Podman on fedorasrv ${color}
 ${color1}${execpi 10 $HOME/.config/conky/prometheus.lua}
+
+${color1}${goto 550}${font jetbrainsmono nerd font:size=14} Hosts ${color}${font}
+${color1}${execpi 10 $HOME/.config/conky/hosts.lua}
 ]]
