new nvim config with lua

--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -1,5 +1,5 @@
 conky.config = {
-    alignment = 'top_left',
+    alignment = 'top_right',
     xinerama_head = 2,
     background = true,
     border_width = 1,
@@ -85,7 +85,7 @@ ${color1}${execpi 10 $HOME/.config/conky/docker.sh 0 docker}
 ${color1}${goto 550}${font jetbrainsmono nerd font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Podman ${color}
 ${color1}${execpi 10 $HOME/.config/conky/containers.lua podman}
 
-${color1}${goto 550}${font jetbrainsmono nerd font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Podman on fedorasrv ${color}
+${color1}${goto 550}${font jetbrainsmono nerd font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Remote Podman ${color}
 ${color1}${execpi 10 $HOME/.config/conky/prometheus.lua}
 
 ${color1}${goto 550}${font jetbrainsmono nerd font:size=14} Hosts ${color}${font}
