display fan info

--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -76,10 +76,13 @@ ${color1}${goto 40}${font JetBrainsMono Nerd Font:size=14} Storage ${color}${
 ${color1}${goto 40}Root${goto 100}: ${color}${fs_used /} / ${fs_size /} ${goto 360}${fs_used_perc /}% ${fs_bar 4,100 /}${goto 40}
 ${color1}${goto 40}Home${goto 100}: ${color}${fs_used /home} / ${fs_size /home} ${goto 360}${fs_used_perc /home}% ${fs_bar 4,100 /home}${goto 40}
 
+${goto 40}Fan
+${goto 40}${execpi 60 $HOME/.config/conky/fan.lua}
+
 ${goto 40} Today meetings
 ${goto 40}${execpi 1800 $HOME/dotfiles/scripts/calendar.lua conky}
 
-${color1}${goto 550}${voffset -710}${font JetBrainsMono Nerd Font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Docker ${color}
+${color1}${goto 550}${voffset -910}${font JetBrainsMono Nerd Font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Docker ${color}
 ${color1}${execpi 10 $HOME/.config/conky/docker.sh 0 docker}
 
 ${color1}${goto 550}${font jetbrainsmono nerd font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Podman ${color}
