lots of additions

--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -15,7 +15,7 @@ conky.config = {
     draw_outline = false,
     draw_shades = false,
     extra_newline = false,
-    font = 'JetBrainsMono Nerd Font:size=14',
+    font = 'JetBrainsMono Nerd Font:size=13',
     gap_x = 50,
     gap_y = 50,
     minimum_height = 250,
@@ -42,7 +42,7 @@ conky.config = {
 
 
 conky.text = [[
-${color1}${goto 40}${voffset -10}${font JetBrainsMono Nerd Font:size=14} GNU/Linux ${color}${font}
+${color1}${goto 40}${voffset -10}${font JetBrainsMono Nerd Font:size=13} GNU/Linux ${color}${font}
 
 ${color1}${goto 40}OS     : ${color}${execi 86400 cat /etc/system-release} 
 ${color1}${goto 40}Kernel : ${color}$kernel on $machine
@@ -54,14 +54,14 @@ $else \
 $endif\
 ${goto 140}${color}${voffset 2}${battery_bar 7,70 BAT0} ${voffset -1}${goto 230}${battery BAT0}${goto 410}${battery_time BAT0}
 
-${goto 40}${color1}${font JetBrainsMono Nerd Font:size=14} System${color}${font}
+${goto 40}${color1}${font JetBrainsMono Nerd Font:size=13} System${color}${font}
 ${color1}${goto 40}Core 1 : ${color}${freq_g 1}GHz ${goto 360}${cpu cpu0}% ${cpubar cpu0 4,100}
 ${color1}${goto 40}Core 2 : ${color}${freq_g 2}GHz ${goto 360}${cpu cpu1}% ${cpubar cpu1 4,100}
 
 ${color1}${goto 40}Uptime : ${color}$uptime_short 
 ${goto 40}${color1}Load   : ${color}${loadavg}
 
-${goto 40}${color1}${font JetBrainsMono Nerd Font:size=14} Memory ${color}${font}
+${goto 40}${color1}${font JetBrainsMono Nerd Font:size=13} Memory ${color}${font}
 ${color1}${goto 40}Ram${goto 100}: ${color}$mem / $memmax ${goto 360}$memperc% ${membar 4,100}
 ${color1}${goto 40}Swap${goto 100}: ${color}$swap / $swapmax ${goto 360}$swapperc% ${swapbar 4,100}
 
@@ -72,7 +72,7 @@ ${goto 40}${top name 3} ${color}${goto 180}${top cpu 3}% ${goto 280}${top_mem na
 ${goto 40}${top name 4} ${color}${goto 180}${top cpu 4}% ${goto 280}${top_mem name 4}${goto 450}${top_mem mem_res 4}
 ${goto 40}${top name 5} ${color}${goto 180}${top cpu 5}% ${goto 280}${top_mem name 5}${goto 450}${top_mem mem_res 5}
 
-${color1}${goto 40}${font JetBrainsMono Nerd Font:size=14} Storage ${color}${font}
+${color1}${goto 40}${font JetBrainsMono Nerd Font:size=13} Storage ${color}${font}
 ${color1}${goto 40}Root${goto 100}: ${color}${fs_used /} / ${fs_size /} ${goto 360}${fs_used_perc /}% ${fs_bar 4,100 /}${goto 40}
 ${color1}${goto 40}Home${goto 100}: ${color}${fs_used /home} / ${fs_size /home} ${goto 360}${fs_used_perc /home}% ${fs_bar 4,100 /home}${goto 40}
 
@@ -82,15 +82,16 @@ ${goto 40}${execpi 60 $HOME/.config/conky/fan.lua}
 ${goto 40} Today meetings
 ${goto 40}${execpi 1800 $HOME/dotfiles/scripts/calendar.lua conky}
 
-${color1}${goto 550}${voffset -910}${font JetBrainsMono Nerd Font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Docker ${color}
-${color1}${execpi 10 $HOME/.config/conky/docker.sh 0 docker}
-
-${color1}${goto 550}${font jetbrainsmono nerd font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Podman ${color}
+${color1}${goto 550}${voffset -810}${font jetbrainsmono nerd font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Podman ${color}
 ${color1}${execpi 10 $HOME/.config/conky/containers.lua podman}
 
 ${color1}${goto 550}${font jetbrainsmono nerd font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Remote Podman ${color}
-${color1}${execpi 10 $HOME/.config/conky/prometheus.lua}
+${color1}${execpi 60 $HOME/.config/conky/prometheus.lua}
 
-${color1}${goto 550}${font jetbrainsmono nerd font:size=14} Hosts ${color}${font}
-${color1}${execpi 10 $HOME/.config/conky/hosts.lua}
+${color1}${goto 550}${font jetbrainsmono nerd font:size=13} Hosts ${color}${font}
+${color1}${execpi 60 $HOME/.config/conky/hosts.lua}
+
+${color1}${goto 550}${font jetbrainsmono nerd font:size=13}${execpi 10 $HOME/.config/conky/pipelines.lua}${color}${font}
+
+${color1}${goto 550}${font jetbrainsmono nerd font:size=13}${execpi 3600 $HOME/.config/conky/issues.lua}${color}${font}
 ]]
