--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ bash/.bash_export
 polybar/.config/polybar/weather_api_key
 conky/.config/conky/.editorconfig
 i3/.config/i3/config.save
+nvim/.config/nvim/plugged/*
